--- a/main/src/main/resources/application.yml
+++ b/main/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 server:
   servlet:
     context-path: /lostandfound
+jwt:
+  tokenHeader: Authorization
+  secret: lostandfound-secret
+  expiration: 604800
+  tokenHead: Bearer
 
 spring:
   profiles:
