--- a/main/pom.xml
+++ b/main/pom.xml
@@ -18,6 +18,10 @@
             <groupId>org.cfc</groupId>
             <artifactId>mbg</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.cfc</groupId>
+            <artifactId>security</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
